feat: implement real-time candle chart with WebSocket integration and dynamic market subscription